# ShibaSync-Android

./: LICENSE  README.md  build.gradle  build_native.ps1  gradle.properties  package-lock.json  package.json  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/shirou/shibasync/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OboeAudioPlayer.cpp
app/src/main/java/com/shirou/shibasync/: AudioCaptureService.kt  AudioPlaybackService.kt  MainActivity.kt  MediaProjectionService.kt  NowPlayingNotificationListener.kt  OboeAudioPlayer.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/shirou/shibasync/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
